--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -29,7 +29,8 @@
   @include shadow(0.75rem);
 
   &__icon {
-    max-width: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
     margin-right: 0.25rem;
   }
 
